# LearnOpenGL

./: .gitignore  CMakeLists.txt  build.bat  learnOpenGLAgain.sln  openGL_first.sln
dependencies/glad/: glad.c
dependencies/glad/glad/: glad.h
learnOpenGLAgain/: learnOpenGLAgain.vcxproj  learnOpenGLAgain.vcxproj.filters
learnOpenGLAgain/Debug/: vc140.idb
openGL_first/: openGL_first.vcxproj  opengl.cpp
openGL_first/Debug/: vc120.idb
openGL_first/Debug/openGL_first.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  openGL_first.lastbuildstate
shader/: coordinate_system.fs  coordinate_system.vs  frame.glsl  vertex.glsl
src/: main.cpp  shader_loader.cpp  shader_loader.h
